# enterprise-rag-system

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PLANNING_AND_TASKS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-cd.yml
config/: models.yaml  security.yaml  vector_db.yaml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
k8s/: README.md  configmap.yaml  namespace.yaml
k8s/deployments/: api.yaml
scripts/: deploy.sh  download_models.py  init_system.sh
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  health.py  ingestion.py  search.py
src/graphrag/: __init__.py  community_detector.py  graph_builder.py  graph_retriever.py  graph_store.py
src/ingestion/: __init__.py  base.py  chunking.py  docx_processor.py  pdf_processor.py
src/integrations/: __init__.py  atlassian.py
src/retrieval/: __init__.py  vector_store.py
src/security/: __init__.py  encryption.py
src/utils/: text_processing.py
tests/: __init__.py  conftest.py
tests/unit/: test_chunking.py  test_document_processor.py  test_docx_processor.py
