[tool.poetry]
name = "enterprise-rag-system"
version = "0.1.0"
description = "Self-hosted enterprise-grade RAG system with advanced AI capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"

# Document Processing
PyPDF2 = "^3.0.0"
python-docx = "^0.8.11"
unstructured = "^0.10.0"
opencv-python = "^4.8.0"
pytesseract = "^0.3.10"

# AI/ML
transformers = "^4.35.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.0"
langchain = "^0.0.340"
langchain-community = "^0.0.1"
openai = "^1.3.0"
cohere = "^4.37.0"

# NLP
spacy = "^3.7.0"
beautifulsoup4 = "^4.12.0"

# Graph Processing
networkx = "^3.2.0"
neo4j = "^5.14.0"
python-louvain = "^0.16"

# Vector Databases
qdrant-client = "^1.7.0"
pgvector = "^0.2.3"

# Databases
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
redis = "^5.0.0"

# Atlassian Integration
atlassian-python-api = "^3.41.0"

# Security
cryptography = "^41.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

# Utilities
python-dotenv = "^1.0.0"
click = "^8.1.0"
rich = "^13.7.0"
loguru = "^0.7.0"
httpx = "^0.25.0"
aiofiles = "^23.2.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"

# Evaluation
ragas = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pylint = "^3.0.0"
bandit = "^1.7.0"
safety = "^2.3.0"
pre-commit = "^3.5.0"
ipython = "^8.17.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]